[gd_scene load_steps=3 format=3 uid="uid://cvcx0x5t0hhe3"]

[ext_resource type="PackedScene" uid="uid://bvmtp3tjquj1h" path="res://Popups/_Base/popup_base.tscn" id="1_dexy1"]
[ext_resource type="Script" uid="uid://ccd5jbudo2pc8" path="res://Popups/ImageViewerPopup/image_viewer_popup.gd" id="2_siuc6"]

[node name="ImageViewerPopup" instance=ExtResource("1_dexy1")]
script = ExtResource("2_siuc6")
title = "ImageViewerPopup"

[node name="TitleLabel" parent="VBoxContainer/PanelContainer/HBoxContainer" index="0"]
text = "ImageViewerPopup"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ZeContentGoesHere" index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ZeContentGoesHere/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImageTextureRect" type="TextureRect" parent="VBoxContainer/ZeContentGoesHere/HBoxContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="FileNameLabel" type="Label" parent="VBoxContainer/ZeContentGoesHere/HBoxContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ZeContentGoesHere/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ImageGrid" type="GridContainer" parent="VBoxContainer/ZeContentGoesHere/HBoxContainer/ScrollContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
